# magdata_nopi

./: CMakeLists.txt  README.md  build_linux.sh  cmdmgr.c  commands.h  device_defs.h  i2c-lgpio.h  i2c-pigpio.c  i2c-pololu.c  i2c.h  magdata.c  magdata.h  main.c  main.h
docs/: ARCHITECTURE.md  HARDWARE.md  TROUBLESHOOTING.md  USAGE.md
